@@ -1,3 +1,11 @@
+2006-01-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* doc/examples/Makefile.am: Fix the source directory for
+	example installation so it will work when starting from
+	outside $(top_srcdir).  This fixes "make distcheck".
+	* include/avr/pgmspace.h: Add a warning about the _P()
+	functions not working above 64 KB.
+
 2005-01-06 Anatoly Sokolov <aesok@post.ru>
 
 	(Contributed by Dmitry Xmelkov.)
